# tooling-docs

./: .asf.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-light.yaml  Makefile  README.md  pagefind.sh  pelicanconf.py  pelicanconf.yaml  pyproject.toml  requirements.txt
.github/linters/: .markdown-lint.yml
.github/workflows/: build-pelican.yml  pre-commit.yml
apache-trusted-release/: advisory-process.md  cve-process.md  data-model.md  digital-signatures.md  distributions.md  evaluate.md  github-build.md  lifecycle.md  platform.md  presentation-outline.txt  requirements.md  svn-dist.md  test-distributions.md  vote.md
apache-trusted-releases/: advisory-process.md  data-model.md  github-build.md  requirements.md  svn-dist.md  vote.md
board-agenda-tool/: plan.md  progress.md  whimsy.md
content/pages/: agenda-tool.md  data-model.md  draft-asf-token-standard-faq.md  draft-asf-token-standard.md  index.md  job-posting.md  platform.md  policies.md  supply-chain.md  svn-dist.md  team.md  trusted-release.md  trusted-releases.md  volunteer.md
develop/: pelican-gha.md  pre-commit.md
output/: agenda-tool.html  data-model.html  draft-asf-token-standard-faq.html  draft-asf-token-standard.html  index.html  job-posting.html  platform.html  policies.html  supply-chain.html  svn-dist.html  team.html  trusted-release.html  trusted-releases.html  volunteer.html
output/_pagefind/: pagefind-entry.json  pagefind.en_11fa10d1d5.pf_meta  pagefind.en_1a98c5d496.pf_meta  pagefind.en_1d5b6aaf5e.pf_meta  pagefind.en_1eaabf2ca9.pf_meta  (+27 more)
output/css/: app.css  (+1 more)
(+90 files in other folders)
