[project]
name = "tooling-docs"
version = "0.0.1"
description = "Internal meta project for Apache Tooling documentation and development tooling (not published)"
authors = [
  { name = "ASF Tooling", email = "dev@tooling.apache.org" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
  "beautifulsoup4",
  "Markdown",
  "pelican",
  "requests"
]

[dependency-groups]
dev = [
  "pre-commit>=2.20.0",
  "pyright>=1.1.393",
  "ruff>=0.9.4",
]

[tool.ruff]
line-length = 120
extend-exclude = [
  "node_modules",
]
